# kaede

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  install.py  test
.github/workflows/: rust.yml  test.yml
compiler/ast/: Cargo.toml
compiler/ast/src/: expr.rs  stmt.rs  top.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: error.rs  expr.rs  generic.rs  lib.rs  mangle.rs  stmt.rs  tcx.rs  tests.rs  top.rs  value.rs
compiler/common/: Cargo.toml
compiler/common/src/: lib.rs
compiler/driver/: Cargo.toml
compiler/driver/src/: main.rs
compiler/driver/tests/: cli.rs  import.rs  leak.rs
compiler/kaede_ast/: Cargo.toml
compiler/kaede_ast/src/: expr.rs  lib.rs  stmt.rs  top.rs
compiler/kaede_codegen/: Cargo.toml
compiler/kaede_codegen/src/: debug.rs  error.rs  expr.rs  lib.rs  mangle.rs  stmt.rs  tcx.rs  tests.rs  top.rs  value.rs
compiler/kaede_compiler/: Cargo.toml
compiler/kaede_compiler/src/: main.rs
compiler/kaede_compiler/tests/: cli.rs  import.rs  leak.rs
compiler/kaede_lex/: Cargo.toml
compiler/kaede_lex/src/: cursor.rs  lib.rs  tests.rs  token.rs
compiler/kaede_location/: Cargo.toml
compiler/kaede_location/src/: lib.rs
compiler/kaede_parse/: Cargo.toml
compiler/kaede_parse/src/: error.rs  expr.rs  lib.rs  stmt.rs  tests.rs  top.rs  ty.rs
compiler/kaede_span/: Cargo.toml
compiler/kaede_symbol/: Cargo.toml
compiler/kaede_symbol/src/: lib.rs
compiler/kaede_type/: Cargo.toml
compiler/kaede_type/src/: lib.rs
compiler/lex/: Cargo.toml  README.md
compiler/lex/src/: cursor.rs  lib.rs  semi.rs  tests.rs  token.rs
compiler/parse/: Cargo.toml
compiler/parse/src/: error.rs  expr.rs  lib.rs  stmt.rs  top.rs  ty.rs
compiler/span/: Cargo.toml
compiler/span/src/: file.rs  lib.rs
compiler/symbol/: Cargo.toml
compiler/symbol/src/: lib.rs
compiler/type/: Cargo.toml
compiler/type/src/: lib.rs
src/: codegen.rs  lex.rs  main.rs  parse.rs
src/ast/: ast.rs
src/codegen/: codegen.rs  expr.rs  tests.rs  top.rs
src/lex/: cursor.rs  lex.rs  tests.rs  token.rs
src/parse/: error.rs  parse.rs  parse_expr.rs  parse_top.rs  parser.rs  tests.rs  tokencursor.rs
