[package]
name = "kaede_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }

kaede_ast = { path = "../ast" }
kaede_span = { path = "../span" }
kaede_parse = { path = "../parse" }
kaede_type = { path = "../type" }
kaede_symbol = { path = "../symbol" }
kaede_common = { path = "../common" }
