[package]
name = "kaede_compiler_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.4"
tempfile = "3.5.0"

kaede_ast = { path = "../ast" }
kaede_codegen = { path = "../codegen" }
kaede_parse = { path = "../parse" }
kaede_common = { path = "../common" }

[dev-dependencies]
assert_fs = "1.0.12"
assert_cmd = "2.0.10"
predicates = "3.0.1"

[[bin]]
name = "kaede"
path = "src/main.rs"
test = false
bench = false
