[package]
name = "kaede_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

kaede_type = { path = "../kaede_type" }
kaede_location = { path = "../kaede_location" }
