[package]
name = "kaede_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

kaede_ast = { path = "../kaede_ast" }
kaede_lex = { path = "../kaede_lex" }
kaede_location = { path = "../kaede_location" }
kaede_parse = { path = "../kaede_parse" }
