[package]
name = "kaede_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
anyhow = "1.0.68"

kaede_ast = { path = "../kaede_ast" }
kaede_codegen = { path = "../kaede_codegen" }
kaede_lex = { path = "../kaede_lex" }
kaede_parse = { path = "../kaede_parse" }
