[package]
name = "kaede_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"

kaede_lex = { path = "../kaede_lex" }
kaede_ast = { path = "../kaede_ast" }
kaede_span = { path = "../kaede_span" }
kaede_type = { path = "../kaede_type" }
kaede_symbol = { path = "../kaede_symbol" }
