[package]
name = "kaede_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"

kaede_lex = { path = "../lex" }
kaede_ast = { path = "../ast" }
kaede_span = { path = "../span" }
kaede_type = { path = "../type" }
kaede_symbol = { path = "../symbol" }
